[package]
name = "nology-api"
version = "0.0.2"
edition = "2021"
license = "MIT"
keywords = ["nas", "synology", "xpenology"]
description = "Rust API client for synology/xpenology nas"
repository = "https://github.com/bool-rus/nology-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
urlencoding = "2.1.2"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }
